--- a/css/styles.css
+++ b/css/styles.css
@@ -36,19 +36,77 @@
   --color-brand-light: #ffffff;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: var(--color-brand-dark);
   font-size: 18px;
   line-height: 1.5;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+.a {
+  display: inline-block;
 }
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 /* ------------------Header----------------------- */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.header-nav {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  gap: 56px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.header-address {
+  display: flex;
+  align-items: center;
+}
 
 .link {
   text-decoration: none;
@@ -59,7 +117,19 @@ ul {
   color: var(--color-brand-blue);
 }
 
+.header-icons {
+}
+
 /* ---------------Hero section--------------- */
+
+.hero-section {
+  padding: 126px 0;
+  background-image: url(/images/cosmetologist-procedure-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  /* background-attachment: fixed; */
+}
 
 .hero-title {
   color: var(--color-brand-blue);
@@ -68,6 +138,7 @@ ul {
   line-height: 0.81;
   text-transform: capitalize;
   max-width: 529px;
+  margin-bottom: 40px;
 }
 
 .hero-button {
@@ -78,6 +149,7 @@ ul {
   background-color: var(--color-brand-blue);
   color: var(--color-brand-light);
   cursor: pointer;
+  margin-bottom: 14px;
 }
 
 .hero-button:hover {
@@ -91,12 +163,27 @@ ul {
   color: var(--color-brand-light);
 }
 
+.header-address {
+  display: flex;
+}
+
+.header-address-container {
+}
+
+.header-icons {
+}
+
 /* -----------Advantages section----------- */
+
+.advantages-section {
+  padding-top: 126px;
+}
 
 .advantages-title {
   max-width: 529px;
   font-weight: 700;
   font-size: 64px;
+  margin-bottom: 40px;
 }
 
 .advantages-title .accent {
@@ -115,18 +202,38 @@ ul {
 
 /* -----------------Benefits section---------------- */
 
+.benefits-container {
+}
+
 .benefits-title {
   font-weight: 700;
   font-size: 64px;
   text-align: center;
+  margin-bottom: 48px;
 }
 
 .benefits-title .accent {
   color: var(--color-brand-blue);
 }
 
+.benefits-menu {
+  display: flex;
+  justify-content: space-between;
+  gap: 56px;
+}
+
+.benefits-items {
+  border-radius: 32px;
+  width: 252px;
+  height: 133px;
+  box-shadow: 0 4px 4px 0 rgba(168, 198, 245, 0.38);
+  padding: 24px 32px;
+}
+
 .benefits-text {
   line-height: 1.3;
+
+  text-align: center;
 }
 
 /* ----------------Procedures section------------ */
@@ -135,10 +242,55 @@ ul {
   font-weight: 700;
   font-size: 64px;
   text-align: center;
+  margin-bottom: 48px;
 }
 
 .procedures-title .accent {
   color: var(--color-brand-blue);
+}
+
+.procedures-container {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
+.procedures-button {
+  background-color: transparent;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  border: 1px solid var(--color-brand-dark);
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.procedures-button:hover {
+  background-color: var(--color-brand-blue);
+  fill: var(--color-brand-light);
+}
+
+.procedures-menu {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.procedures-card {
+  /* display: flex; */
+  background: linear-gradient(
+    180deg,
+    rgba(1, 28, 68, 0) 47.4%,
+    rgba(1, 28, 68, 0.73) 82.66%,
+    #011c44 99.06%
+  );
+  border-radius: 120px 4px;
+  width: 344px;
+  height: 456px;
 }
 
 .procedures-item {
@@ -153,18 +305,35 @@ ul {
 
 /* ----------------location section--------------- */
 
+.location-section {
+  padding-bottom: 96px;
+}
+
 .location-title {
   font-weight: 700;
   font-size: 64px;
   text-align: center;
+  margin-bottom: 48px;
 }
 
 .location-title .accent {
   color: var(--color-brand-blue);
 }
 
+.location-container {
+  display: flex;
+  gap: 32px;
+}
+
+.location-map {
+  flex-shrink: 0;
+  border-radius: 32px;
+}
+
 .container-location-form {
   background-color: #011c44;
+  border-radius: 32px;
+  width: 423px;
 }
 
 .location-form-title {
@@ -225,6 +394,35 @@ ul {
 
 .footer {
   background-color: #011c44;
+  padding: 56px 0;
+}
+
+.footer-container {
+  display: flex;
+  gap: 20px;
+}
+.footer-nav {
+  flex-basis: 50%;
+  display: flex;
+  gap: 20px;
+}
+.footer-logo {
+  flex-grow: 1;
+  display: inline-block;
+}
+
+.footer-menu {
+  flex-grow: 1;
+}
+
+.footer-address {
+  flex-basis: 50%;
+  display: flex;
+  gap: 20px;
+}
+
+.address-list-footer {
+  flex-grow: 1;
 }
 
 .link-footer {
@@ -234,6 +432,10 @@ ul {
 
 .link-footer:hover {
   color: var(--color-brand-blue);
+}
+
+.address-info {
+  flex-grow: 1;
 }
 
 .footer-address-link {
