add hero photo changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ ul {
 
 .hero-section {
   padding: 126px 0;
-  background-image: url(/images/cosmetologist-procedure-hero.jpg);
+  background-image: url(../images/cosmetologist-procedure-hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
