--- a/css/styles.css
+++ b/css/styles.css
@@ -491,3 +491,38 @@ ul {
   text-decoration: none;
   font-style: normal;
 }
+
+/* -------------MODAL------------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.backdrop.is-hidden {
+  display: none;
+}
+
+.modal {
+  position: relative;
+
+  width: 880px;
+
+  height: 880px;
+
+  background-color: var(--color-brand-dark);
+  border-radius: 32px;
+}
+
+.modal-btn-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
