--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,17 @@ ul {
 
 /* ------------------Header----------------------- */
 
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.25);
+  padding-top: 32px;
+  height: 106px;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -120,6 +131,7 @@ ul {
 .link {
   text-decoration: none;
   color: var(--color-brand-dark);
+  transition: color 2s;
 }
 
 .link:hover {
@@ -133,7 +145,14 @@ ul {
 
 .hero-section {
   padding: 126px 0;
-  background-image: url(../images/cosmetologist-procedure-hero.jpg);
+  background-image: linear-gradient(
+      94deg,
+      #fff 9.65%,
+      rgba(255, 255, 255, 0.85) 26.08%,
+      rgba(255, 255, 255, 0.19) 52.74%,
+      rgba(255, 255, 255, 0) 74.46%
+    ),
+    url(../images/cosmetologist-procedure-hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -548,10 +567,14 @@ ul {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 0;
+  transition: opacity 3s, visibility 3s;
 }
 
 .backdrop.is-hidden {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
