--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@
   --color-brand-blue: #2b7fff;
   --color-brand-dark: #011c44;
   --color-brand-light: #ffffff;
+  --color-brand-gray: #747272;
 }
 
 *,
@@ -579,17 +580,113 @@ ul {
 
 .modal {
   position: relative;
-
-  width: 880px;
-
-  height: 880px;
-
+  width: 100%;
+  max-width: 723px;
+  height: 100%;
+  max-height: 681px;
+  padding: 128px;
   background-color: var(--color-brand-dark);
-  border-radius: 32px;
+  border-radius: 48px;
+  color: var(--color-brand-light);
+  overflow-y: auto;
+  text-align: center;
 }
 
 .modal-btn-close {
   position: absolute;
   top: 40px;
   right: 40px;
+}
+
+/* -----------Form---------------- */
+
+.modal-hero {
+  /* text-transform: uppercase; */
+  font-weight: 700;
+  font-size: 64px;
+}
+
+.modal-hero-text {
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 40px;
+}
+
+.modal-hero-text .accent {
+  color: var(--color-brand-blue);
+}
+
+.contact-form {
+  width: 310px;
+  height: 409px;
+}
+
+.form-field {
+  margin-bottom: 24px;
+}
+
+.input-modal {
+  font-size: 16px;
+  line-height: 1.17;
+  padding: 16px 42px;
+  width: 100%;
+  max-width: 310px;
+  max-height: 52px;
+  border: 2px solid var(--color-brand-gray);
+  border-radius: 32px;
+  background-color: transparent;
+}
+
+.input-modal::placeholder {
+  color: var(--color-brand-light);
+}
+
+.input-modal:focus {
+  outline: none;
+  background: var(--color-brand-gray);
+  border: none;
+  color: var(--color-brand-light);
+}
+
+.input-modal:focus::placeholder {
+  color: var(--color-brand-light);
+}
+
+.label-modal {
+  visibility: hidden;
+}
+
+.input-modal::placeholder .label-modal {
+  display: block;
+  font-size: 16px;
+  line-height: 1.17;
+  color: var(--color-brand-light);
+}
+
+.form-button {
+  margin: 0 auto 24px;
+  display: block;
+  border-radius: 32px;
+  padding: 16px 32px;
+  width: 281px;
+  height: 53px;
+  background: var(--color-brand-blue);
+  color: var(--color-brand-light);
+  border: none;
+  cursor: pointer;
+}
+
+.form-terms {
+  margin: 0 auto;
+  max-width: 220px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+  color: var(--color-brand-gray);
+}
+
+.form-terms-link {
+  color: var(--color-primary-dark);
+  text-underline-offset: 2px;
 }
