--- a/css/styles.css
+++ b/css/styles.css
@@ -404,9 +404,17 @@ ul {
 }
 
 .container-location-form {
-  background-color: #011c44;
   border-radius: 32px;
-  width: 423px;
+  width: 100%;
+  max-width: 422px;
+  max-height: 482px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: var(--color-brand-dark);
+  color: var(--color-brand-light);
+  text-align: center;
 }
 
 .location-form-title {
@@ -415,28 +423,46 @@ ul {
   font-size: 22px;
   text-align: center;
   max-width: 274px;
+  margin: 0 auto;
 }
 
 .location-form-title .accent {
   color: var(--color-brand-blue);
 }
 
-.location-field {
-  border: 2px solid #747272;
-  border-radius: 32px;
+.location-form {
   width: 310px;
-  height: 52px;
-  font-size: 13px;
-  color: var(--color-brand-light);
-  text-align: left;
+
+  height: 301px;
+  margin: 0 auto;
 }
 
-.location-field:hover {
-  background-color: #747272;
+.label-location {
+  visibility: hidden;
 }
 
-.location-field:hover::placeholder {
+.location-field {
+  font-size: 16px;
+  line-height: 1.17;
+  padding: 16px 42px;
+  width: 100%;
+  max-width: 310px;
+  max-height: 52px;
+  border: 2px solid var(--color-brand-gray);
+  border-radius: 32px;
+  background-color: transparent;
   color: var(--color-brand-light);
+  margin-bottom: 16px;
+}
+
+.location-field::placeholder {
+  color: var(--color-brand-light);
+}
+
+.location-field:focus {
+  outline: none;
+  background: var(--color-brand-gray);
+  border: none;
 }
 
 .location-button {
